Fix overflow which prevent dropdowns to display when no content

--- a/plugins/agiledashboard/www/themes/default/css/style.css
+++ b/plugins/agiledashboard/www/themes/default/css/style.css
@@ -33,6 +33,7 @@
 
 .agiledashboard > .tab-content {
     padding-bottom: 1em;
+    overflow: visible;
 }
 
 .planning-backlog > table {
